--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "element-ui": "^2.4.5",
     "kiko-rascalhao": "^1.0.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-schart": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
