--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.4.5",
     "kiko-rascalhao": "^1.0.0",
+    "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-schart": "^1.0.0"
