--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.5",
+    "highcharts": "^6.1.1",
     "kiko-rascalhao": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
